projects/vb6parse/snapshots/syntax/library/functions/graphics/tab/tab_formatted_report.snap
---
source: projects/vb6parse/src/syntax/library/functions/graphics/tab.rs
assertion_line: 504
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SubStatement
      children:
        - kind: SubKeyword
          text: Sub
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: Test
        - kind: ParameterList
          children:
            - kind: LeftParenthesis
              text: (
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
        - kind: StatementList
          children:
            - kind: PrintStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: PrintKeyword
                  text: Print
                - kind: Whitespace
                  text: " "
                - kind: ArgumentList
                  children:
                    - kind: Argument
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: Tab
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "1"
                            - kind: RightParenthesis
                              text: )
                    - kind: Semicolon
                      text: ;
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Header1\""
                    - kind: Semicolon
                      text: ;
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: CallExpression
                          children:
                            - kind: Identifier
                              text: Tab
                            - kind: LeftParenthesis
                              text: (
                            - kind: ArgumentList
                              children:
                                - kind: Argument
                                  children:
                                    - kind: NumericLiteralExpression
                                      children:
                                        - kind: IntegerLiteral
                                          text: "20"
                            - kind: RightParenthesis
                              text: )
                    - kind: Semicolon
                      text: ;
                    - kind: Whitespace
                      text: " "
                    - kind: Argument
                      children:
                        - kind: StringLiteralExpression
                          children:
                            - kind: StringLiteral
                              text: "\"Header2\""
                - kind: Newline
                  text: "\n"
            - kind: ForStatement
              children:
                - kind: Whitespace
                  text: "    "
                - kind: ForKeyword
                  text: For
                - kind: Whitespace
                  text: " "
                - kind: IdentifierExpression
                  children:
                    - kind: Identifier
                      text: i
                - kind: Whitespace
                  text: " "
                - kind: EqualityOperator
                  text: "="
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "1"
                - kind: Whitespace
                  text: " "
                - kind: ToKeyword
                  text: To
                - kind: Whitespace
                  text: " "
                - kind: NumericLiteralExpression
                  children:
                    - kind: IntegerLiteral
                      text: "5"
                - kind: Newline
                  text: "\n"
                - kind: StatementList
                  children:
                    - kind: PrintStatement
                      children:
                        - kind: Whitespace
                          text: "        "
                        - kind: PrintKeyword
                          text: Print
                        - kind: Whitespace
                          text: " "
                        - kind: ArgumentList
                          children:
                            - kind: Argument
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: Tab
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: NumericLiteralExpression
                                              children:
                                                - kind: IntegerLiteral
                                                  text: "1"
                                    - kind: RightParenthesis
                                      text: )
                            - kind: Semicolon
                              text: ;
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: data1
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: Identifier
                                                  text: i
                                    - kind: RightParenthesis
                                      text: )
                            - kind: Semicolon
                              text: ;
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: Tab
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: NumericLiteralExpression
                                              children:
                                                - kind: IntegerLiteral
                                                  text: "20"
                                    - kind: RightParenthesis
                                      text: )
                            - kind: Semicolon
                              text: ;
                            - kind: Whitespace
                              text: " "
                            - kind: Argument
                              children:
                                - kind: CallExpression
                                  children:
                                    - kind: Identifier
                                      text: data2
                                    - kind: LeftParenthesis
                                      text: (
                                    - kind: ArgumentList
                                      children:
                                        - kind: Argument
                                          children:
                                            - kind: IdentifierExpression
                                              children:
                                                - kind: Identifier
                                                  text: i
                                    - kind: RightParenthesis
                                      text: )
                        - kind: Newline
                          text: "\n"
                    - kind: Whitespace
                      text: "    "
                - kind: NextKeyword
                  text: Next
                - kind: Whitespace
                  text: " "
                - kind: Identifier
                  text: i
                - kind: Newline
                  text: "\n"
        - kind: EndKeyword
          text: End
        - kind: Whitespace
          text: " "
        - kind: SubKeyword
          text: Sub
        - kind: Newline
          text: "\n"
